--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,22 @@
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 * {
   box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: transparent;
+}
+
+.gallery-wrapper {
+  img {
+    margin: 10px;
+    filter: grayscale(100%);
+
+    cursor: pointer;
+
+    &:hover {
+      filter: none;
+    }
+  }
+}
