--- a/src/global.scss
+++ b/src/global.scss
@@ -8,6 +8,10 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+.background {
+  background-image: url("./media/halftone-yellow.png");
+}
+
 .gallery-wrapper {
   img {
     margin: 10px;
