--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,19 @@
+@keyframes ball {
+  0%, 100% {
+    animation-timing-function: cubic-bezier(0.45, 0, 0.9, 0.55);
+  }
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 108px);
+    animation-timing-function: cubic-bezier(0, 0.45, 0.55, 0.9);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,6 +26,7 @@ body {
 
 .background {
   background-image: url("./media/halftone-yellow.png");
+  min-height: 100vh
 }
 
 .gallery-wrapper {
@@ -22,5 +39,24 @@ body {
     &:hover {
       filter: none;
     }
+  }
+}
+
+.gallery-loader {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+
+  .ball {
+    width: 52px;
+    height: 52px;
+
+    position: absolute;
+    top: calc(50% - 52px/2);
+    left: calc(50% - 52px/2);
+
+    border-radius: 50%;
+    background: black;
+    animation: ball 1s linear infinite;
   }
 }
