--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,7 @@
     transform: translate(0, 0); } }
 
 body {
+  font-family: 'Anonymous Pro', monospace;
   margin: 0;
   padding: 0; }
 
@@ -20,6 +21,15 @@ body {
 .background {
   background-image: url("./media/halftone-yellow.png");
   min-height: 100vh; }
+
+.error {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700; }
 
 .gallery-wrapper img {
   margin: 10px;
@@ -36,8 +46,8 @@ body {
     width: 52px;
     height: 52px;
     position: absolute;
-    top: calc(50% - 52px/2);
-    left: calc(50% - 52px/2);
+    top: calc(50% - 52px / 2);
+    left: calc(50% - 52px / 2);
     border-radius: 50%;
     background: black;
     animation: ball 1s linear infinite; }
