--- a/src/global.scss
+++ b/src/global.scss
@@ -15,6 +15,7 @@
 }
 
 body {
+  font-family: 'Anonymous Pro', monospace;
   margin: 0;
   padding: 0;
 }
@@ -27,6 +28,16 @@ body {
 .background {
   background-image: url("./media/halftone-yellow.png");
   min-height: 100vh
+}
+
+.error {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
 }
 
 .gallery-wrapper {
@@ -52,8 +63,8 @@ body {
     height: 52px;
 
     position: absolute;
-    top: calc(50% - 52px/2);
-    left: calc(50% - 52px/2);
+    top: calc(50% - 52px / 2);
+    left: calc(50% - 52px / 2);
 
     border-radius: 50%;
     background: black;
