--- a/src/global.css
+++ b/src/global.css
@@ -19,24 +19,26 @@ body {
   -webkit-tap-highlight-color: transparent; }
 
 .background {
-  background-image: url("./media/halftone-yellow.png");
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-image: url("./media/halftone-yellow.png"); }
 
 .error {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 200px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-weight: 700; }
 
-.gallery-wrapper img {
-  margin: 10px;
-  filter: grayscale(100%);
-  cursor: pointer; }
-  .gallery-wrapper img:hover {
-    filter: none; }
+.gallery-wrapper {
+  margin: 100px 0; }
+  .gallery-wrapper img {
+    margin: 8px;
+    filter: grayscale(100%);
+    cursor: pointer; }
+    .gallery-wrapper img:hover {
+      filter: none; }
 
 .gallery-loader {
   position: relative;
