--- a/src/global.scss
+++ b/src/global.scss
@@ -16,6 +16,7 @@
 
 body {
   font-family: 'Anonymous Pro', monospace;
+  font-size: 14px;
   margin: 0;
   padding: 0;
 }
@@ -41,16 +42,57 @@ body {
 }
 
 .gallery-wrapper {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
   margin: 100px 0;
 
-  img {
-    margin: 8px;
-    filter: grayscale(100%);
+  .picture {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
 
-    cursor: pointer;
+    background-color: white;
+    margin: 10px;
+    padding: 20px;
+
+    .caption {
+      width: 100%;
+
+      > p {
+        width: 300px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        > p {
+          max-width: 200px;
+        }
+      }
+    }
+
+    img {
+      width: auto;
+      max-width: 300px;
+      height: 195px;
+      filter: grayscale(100%);
+      cursor: pointer;
+    }
 
     &:hover {
-      filter: none;
+      img {
+        filter: none;
+      }
     }
   }
 }
