--- a/src/global.css
+++ b/src/global.css
@@ -19,9 +19,36 @@ body {
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent; }
 
+h1, h2 {
+  margin: 0; }
+
+h1 {
+  font-size: 20px;
+  color: white; }
+
+h2 {
+  font-size: 18px; }
+
 .background {
   min-height: 100vh;
   background-image: url("./media/halftone-yellow.png"); }
+
+.navigation-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10; }
+
+.navigation {
+  height: 50px;
+  width: 100%;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px; }
 
 .full-page {
   width: 100%;
@@ -37,7 +64,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 100px 0; }
+  margin: 50px 0 100px 0; }
   .gallery-wrapper .picture {
     display: flex;
     flex-direction: column;
