--- a/src/global.css
+++ b/src/global.css
@@ -66,6 +66,7 @@ h2 {
   justify-content: center;
   margin: 50px 0 100px 0; }
   .gallery-wrapper .picture {
+    width: 295px;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -73,6 +74,9 @@ h2 {
     background-color: white;
     margin: 10px;
     padding: 20px; }
+    @media (min-width: 768px) {
+      .gallery-wrapper .picture {
+        width: 335px; } }
     .gallery-wrapper .picture .caption {
       width: 100%; }
       .gallery-wrapper .picture .caption a {
@@ -80,10 +84,13 @@ h2 {
         .gallery-wrapper .picture .caption a:hover {
           font-weight: 700; }
       .gallery-wrapper .picture .caption > p {
-        width: 300px;
+        width: 255px;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis; }
+        @media (min-width: 768px) {
+          .gallery-wrapper .picture .caption > p {
+            width: 295px; } }
       .gallery-wrapper .picture .caption div {
         display: flex;
         flex-direction: row;
@@ -93,10 +100,12 @@ h2 {
           max-width: 200px; }
     .gallery-wrapper .picture img {
       width: auto;
-      max-width: 300px;
+      max-width: 255px;
       height: 195px;
-      filter: grayscale(100%);
-      cursor: pointer; }
+      filter: grayscale(100%); }
+      @media (min-width: 768px) {
+        .gallery-wrapper .picture img {
+          max-width: 295px; } }
     .gallery-wrapper .picture:hover img {
       filter: none; }
 
