--- a/src/global.css
+++ b/src/global.css
@@ -43,7 +43,7 @@ h2 {
 .navigation {
   height: 50px;
   width: 100%;
-  background-color: black;
+  background-color: #070707;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -71,7 +71,7 @@ h2 {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    background-color: white;
+    background-color: #FFFCF2;
     margin: 10px;
     padding: 20px; }
     @media (min-width: 768px) {
@@ -120,5 +120,23 @@ h2 {
     top: calc(50% - 52px / 2);
     left: calc(50% - 52px / 2);
     border-radius: 50%;
-    background: black;
+    background: #070707;
     animation: ball 1s linear infinite; }
+
+.button {
+  height: 50px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Anonymous Pro', monospace;
+  font-size: 16px;
+  font-weight: 700;
+  color: #FFFCF2;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: black;
+  border: 1px solid black;
+  margin: 20px auto; }
+  .button:hover {
+    color: #FEDB67; }
