--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
+@keyframes blink-animation {
+  to {
+    visibility: hidden; } }
+
 @keyframes ball {
   0%, 100% {
     animation-timing-function: cubic-bezier(0.45, 0, 0.9, 0.55); }
@@ -58,6 +62,15 @@ h2 {
   justify-content: center;
   align-items: center;
   font-weight: 700; }
+  .full-page.landing {
+    margin-top: 100px;
+    text-align: center; }
+    .full-page.landing h1 {
+      font-size: 65px;
+      margin-bottom: 30px; }
+    .full-page.landing h2 {
+      line-height: 26px;
+      margin-bottom: 20px; }
 
 .gallery-wrapper {
   position: relative;
@@ -125,7 +138,7 @@ h2 {
 
 .button {
   height: 50px;
-  width: 200px;
+  width: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,3 +153,6 @@ h2 {
   margin: 20px auto; }
   .button:hover {
     color: #FEDB67; }
+
+.blink {
+  animation: blink-animation 1s steps(5, start) infinite; }
