--- a/src/global.scss
+++ b/src/global.scss
@@ -4,6 +4,12 @@ $red: #BA2D0B;
 $orange: #FACB6F;
 $yellow: #FEDB67;
 
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
 @keyframes ball {
   0%, 100% {
     animation-timing-function: cubic-bezier(0.45, 0, 0.9, 0.55);
@@ -77,6 +83,21 @@ h2 {
   justify-content: center;
   align-items: center;
   font-weight: 700;
+
+  &.landing {
+    margin-top: 100px;
+    text-align: center;
+
+    h1 {
+      font-size: 65px;
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      line-height: 26px;
+      margin-bottom: 20px;
+    }
+  }
 }
 
 .gallery-wrapper {
@@ -176,7 +197,7 @@ h2 {
 
 .button {
   height: 50px;
-  width: 200px;
+  width: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -194,4 +215,8 @@ h2 {
   &:hover {
     color: $yellow;
   }
+}
+
+.blink {
+  animation: blink-animation 1s steps(5, start) infinite;
 }
