--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,13 @@ body {
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent; }
 
+::selection {
+  color: #FFFCF2;
+  background-color: #070707; }
+
+:focus {
+  outline-color: #FACB6F; }
+
 h1, h2 {
   margin: 0; }
 
@@ -83,6 +90,19 @@ h2 {
     .full-page.landing h2 {
       line-height: 26px;
       margin-bottom: 20px; }
+
+.filters {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #FFFCF2;
+  margin-top: 100px;
+  padding: 30px; }
+  @media (min-width: 768px) {
+    .filters {
+      flex-direction: row; } }
 
 .gallery-wrapper {
   position: relative;
@@ -168,3 +188,14 @@ h2 {
 
 .blink {
   animation: blink-animation 1s steps(5, start) infinite; }
+
+input[type=text] {
+  max-width: 100%;
+  height: 30px;
+  font-family: 'Anonymous Pro', monospace;
+  background-color: #FFFCF2;
+  border: 1px solid #070707;
+  padding: 5px 10px;
+  margin: 10px; }
+  input[type=text]:focus {
+    border: 1px solid #FACB6F; }
