--- a/src/global.scss
+++ b/src/global.scss
@@ -38,6 +38,15 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+::selection {
+  color: $white;
+  background-color: $black;
+}
+
+:focus {
+  outline-color: $orange;
+}
+
 h1, h2 {
   margin: 0;
 }
@@ -120,6 +129,21 @@ h2 {
       line-height: 26px;
       margin-bottom: 20px;
     }
+  }
+}
+
+.filters {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: $white;
+  margin-top: 100px;
+  padding: 30px;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
   }
 }
 
@@ -242,4 +266,19 @@ h2 {
 
 .blink {
   animation: blink-animation 1s steps(5, start) infinite;
+}
+
+input[type=text] {
+  max-width: 100%;
+  height: 30px;
+
+  font-family: 'Anonymous Pro', monospace;
+  background-color: $white;
+  border: 1px solid $black;
+  padding: 5px 10px;
+  margin: 10px;
+
+  &:focus {
+    border: 1px solid $orange;
+  }
 }
