--- a/src/global.css
+++ b/src/global.css
@@ -91,18 +91,59 @@ h2 {
       line-height: 26px;
       margin-bottom: 20px; }
 
+.filters-wrapper {
+  width: 100%;
+  height: auto;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  @media (min-width: 768px) {
+    .filters-wrapper {
+      height: 100px;
+      flex-direction: row; } }
+  .filters-wrapper .filters-controls {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px; }
+    @media (min-width: 768px) {
+      .filters-wrapper .filters-controls {
+        width: 150px;
+        margin-bottom: 0; } }
+
+.filters-button {
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-image: url("./media/arrow.svg");
+  background-color: transparent;
+  background-position: center;
+  border: none;
+  padding: 0;
+  transform: rotate(-180deg);
+  transition: transform 0.2s linear; }
+  .filters-button.active {
+    transform: rotate(0deg); }
+    @media (min-width: 768px) {
+      .filters-button.active {
+        transform: rotate(-90deg); } }
+
 .filters {
-  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: #FFFCF2;
-  margin-top: 100px;
-  padding: 30px; }
+  padding: 25px; }
   @media (min-width: 768px) {
     .filters {
-      flex-direction: row; } }
+      height: 100px;
+      flex-direction: row;
+      margin-left: 50px; } }
 
 .gallery-wrapper {
   position: relative;
