--- a/src/global.scss
+++ b/src/global.scss
@@ -132,18 +132,69 @@ h2 {
   }
 }
 
+.filters-wrapper {
+  width: 100%;
+  height: auto;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media (min-width: 768px) {
+    height: 100px;
+    flex-direction: row;
+  }
+
+  .filters-controls {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+
+    @media (min-width: 768px) {
+      width: 150px;
+      margin-bottom: 0;
+    }
+  }
+}
+
+.filters-button {
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-image: url("./media/arrow.svg");
+  background-color: transparent;
+  background-position: center;
+  border: none;
+  padding: 0;
+  transform: rotate(-180deg);
+  transition: transform 0.2s linear;
+
+  &.active {
+    transform: rotate(0deg);
+
+    @media (min-width: 768px) {
+      transform: rotate(-90deg);
+    }
+  }
+
+}
+
 .filters {
-  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
   background-color: $white;
-  margin-top: 100px;
-  padding: 30px;
+  padding: 25px;
 
   @media (min-width: 768px) {
+    height: 100px;
     flex-direction: row;
+    margin-left: 50px;
   }
 }
 
