--- a/src/global.scss
+++ b/src/global.scss
@@ -170,6 +170,7 @@ h2 {
   background-position: center;
   border: none;
   padding: 0;
+  cursor: pointer;
   transform: rotate(-180deg);
   transition: transform 0.2s linear;
 
