--- a/src/global.scss
+++ b/src/global.scss
@@ -349,11 +349,13 @@ h2 {
   }
 
   &:disabled {
-    opacity: 0.5;
+    background-color: transparent;
+    border-color: transparent;
+    color: $black;
     cursor: not-allowed;
 
     &:hover {
-      color: $white;
+      color: $black;
     }
   }
 }
