--- a/src/global.css
+++ b/src/global.css
@@ -76,12 +76,15 @@ h2 {
 
 .full-page {
   width: 100%;
-  height: calc(100vh - 300px);
+  height: calc(100vh - 200px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-weight: 700; }
+  @media (min-width: 768px) {
+    .full-page {
+      height: calc(100vh - 300px); } }
   .full-page.landing {
     margin-top: 100px;
     text-align: center; }
@@ -263,8 +266,11 @@ input[type=text] {
   font-family: 'Anonymous Pro', monospace;
   background-color: #FFFCF2;
   border: 1px solid #070707;
+  border-radius: 0;
   padding: 5px 10px;
-  margin: 10px; }
+  margin: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none; }
   input[type=text]:focus {
     border: 1px solid #FACB6F; }
 
