--- a/src/global.scss
+++ b/src/global.scss
@@ -110,12 +110,16 @@ h2 {
 
 .full-page {
   width: 100%;
-  height: calc(100vh - 300px);
+  height: calc(100vh - 200px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-weight: 700;
+
+  @media (min-width: 768px) {
+    height: calc(100vh - 300px);
+  }
 
   &.landing {
     margin-top: 100px;
@@ -371,8 +375,12 @@ input[type=text] {
   font-family: 'Anonymous Pro', monospace;
   background-color: $white;
   border: 1px solid $black;
+  border-radius: 0;
   padding: 5px 10px;
   margin: 10px;
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
 
   &:focus {
     border: 1px solid $orange;
